# ZeroTrace

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  cargo.toml  obfuscate_strings.py  persistence_dropper.sh  setup.sh
.Cargo/: Cargo.toml
scripts/: deploy.sh  dropper.c
src/: engine.rs  header_shuffle.rs  key.c  loader.c  main.c  main.rs  main.zig  rdtsc_timer.rs  syscalls.zig  tcp_syn_crafter.rs  tls_grease.rs
src/bpf/: bpf_helper_defs.h  ghost.c  ghost_gate.bpf.c  vfs_cache.bpf.c  zerotrace.bpf.c
src/xdp-interceptor/: cargo.toml  interceptor.bpf.c
src/xdp-interceptor/src/: lib.rs  main.rs
