[package]
name = "zerotrace"
version = "0.2.0"
edition = "2021"
authors = ["C4rbn"]
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
anyhow = "1.0.90"
ctrlc = "3.5.2"
aya = { version = "0.13.1", features = ["async_tokio"] }
tokio = { version = "1.40", features = ["full", "sync"] }
nix = { version = "0.29", features = ["net", "user"] }
libc = "0.2.163"
rand = "0.8.5"
bytes = "1.7"
rlimit = "0.10"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
