[package]
name = "zerotrace"
version = "1.8.0"
edition = "2021"

[dependencies]
libbpf-rs = "0.24"
libc = "0.2"
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
ctrlc = "3.4"

[build-dependencies]
libbpf-cargo = "0.24"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
